Add function dashboard
